--- a/index.html
+++ b/index.html
@@ -97,6 +97,30 @@
         </div>
       </div>
     </main>
-    <footer></footer>
+    <footer class="footer__container">
+      <div class="footer__icons">
+        <a href="https://www.facebook.com/netflixbrasil/?locale=pt_BR" target="_blank"><i class="fa-brands fa-facebook-f fa-xl"></i></a>
+        <i class="fa-brands fa-instagram fa-xl"></i>
+        <i class="fa-brands fa-twitter fa-xl"></i>
+        <i class="fa-brands fa-youtube fa-xl"></i>
+      </div>
+      <div class="footer__options">
+        <a href="#" class="options__text">Idioma e legendas</a>
+        <a href="#" class="options__text">Audiodescrição</a>
+        <a href="#" class="options__text">Centro de ajuda</a>
+        <a href="#" class="options__text">Cartão pré-pago</a>
+        <a href="#" class="options__text">Imprensa</a>
+        <a href="#" class="options__text">Relações com investidores</a>
+        <a href="#" class="options__text">Carreiras</a>
+        <a href="#" class="options__text">Termos de uso</a>
+        <a href="#" class="options__text">Privacidade</a>
+        <a href="#" class="options__text">Avisos legais</a>
+        <a href="#" class="options__text">Preferência de cookies</a>
+        <a href="#" class="options__text">Informações corporativas</a>
+        <a href="#" class="options__text">Entre em contato</a>
+      </div>
+      <button class="footer__btn">Código de serviço</button>
+      <div class="footer__rigths">&copy; 1997-2023 Netflix, Inc.</div>
+    </footer>
   </body>
 </html>
